# ht_test

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  comftest.py  conftest.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  ruff.toml
alembic/: env.py  script.py.mako
alembic/versions/: 76d74e693f5a_add_indexes_and_unique_constraint_to_.py  b19cce1cae4c_init_create_tables.py
app/: main.py
app/core/: container.py  database.py  endpoints.py  pg_connector.py  repository.py  settings.py  unit_of_work.py  use_case.py
app/core/exceptions/: exceptions.py  handlers.py  registry.py
app/core/utils/: introspection.py
app/departments/: endpoints.py  models.py  repository.py  schemas.py
app/departments/use_cases/: create.py  delete.py  get_with_tree.py  move.py
app/employees/: endpoints.py  models.py  repository.py  schemas.py
app/employees/use_case/: create.py
tests/departments/: test_delete_use_case.py
tests/fakes/: fake_repositories.py
tests/unit/: test_create_department.py  test_use_cases_create.py
